# solmail-android

./: .gitignore  README.md
.cursor/rules/: git-commits-no-trailers.mdc
.githooks/: commit-msg
.github/workflows/: build-check.yml  deploy-solmail.yml
Zero/: .dockerignore  .env.example  .gitignore  .oxlintrc.json  AGENT.md  ESCROW_AGENT_IMPLEMENTATION.md  MCP.md  README.md  SECURITY.md  docker-compose.db.yaml  docker-compose.prod.yaml  eslint.config.mjs  i18n.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
Zero/.devcontainer/: Dockerfile  devcontainer.json
Zero/.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  TRANSLATION.md
Zero/.github/workflows/: ci.yml  deploy-to-prod-command.yml  lingo-dev.yml  sync-production.yml
Zero/patches/: novel.patch
Zero/programs/escrow/: Anchor.toml  Cargo.toml
Zero/programs/escrow/src/: lib.rs
Zero/scripts/: README.md  circle.ts  package.json  register-elevenlabs-tools.ts  run.ts  tsconfig.json
escrow/: .gitignore  Anchor.toml  Cargo.toml  README.md
escrow/programs/solmail_escrow/: Cargo.toml
escrow/programs/solmail_escrow/src/: lib.rs
solidity-escrow/: .gitignore  README.md  foundry.toml
solidity-escrow/script/: Deploy.s.sol
solidity-escrow/src/: SolmailEscrow.sol
solidity-escrow/test/: SolmailEscrow.t.sol
solmail-android/: .env.example  .gitignore  app.json  package.json  pnpm-lock.yaml  polyfill.js
solmail-android/app/: _layout.tsx  auth-callback.tsx  compose.tsx  inbox.tsx
solmail-android/components/: email-scoring-modal.tsx
solmail-android/constants/: colors.ts
(+391 files in other folders)
